--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "foundation-sites": "^6.4.1",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
